# wemulate-api

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  Makefile  README.md  nohup.out  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: dockerimage.yml  publish-package.yml
api/: app.py
api/core/: utils.py
api/routers/: v1.py
api/schemas/: schemas.py
interfaces/: interfaces.db  interfaces.py  wsgi.py
local-development/: docker-compose.yml
project/: api_models.py  api_parsers.py  app.py  config.py  controllers.py  device_ns.py  exception.py  localhost.py
project/apis/: __init__.py  salt.py  salt_interface.py
project/core/: __init__.py  logical_interface.py  models.py  service.py  utils.py
project/core/database/: models.py  utils.py
project/core/parser/: connection.py  device.py
project/mockup/: object_mockup.py  salt_mockup.py
salt/_modules/: wemulate.py
salt/files/: uniform.dist  uniform.py
salt/modules/: wemulate.py
salt/orchestrate/: add_device.sls
salt/reactors/: accept_key.sls  add_device.sls  sync_modules.sls
tests/: conftest.py
tests/manual/: connection_helper.py  parameter_helper.py  test_connection.py  test_db_models.py  test_delay.py  test_devices.py  test_parameters.py
tests/unit/: test_db_models.py  test_interface.py  test_service.py
wemulate_api/: app.py
wemulate_api/api/: __init__.py  v1.py
